[gd_scene load_steps=19 format=3 uid="uid://dm306kutu3ujc"]

[ext_resource type="Script" uid="uid://cm4gmf7wu55rt" path="res://scenes/objects/players/weapons/copy_robot/arrow.gd" id="1_huft4"]
[ext_resource type="Shader" uid="uid://b3xb8j1icuyp" path="res://shaders/PaletteSwap.gdshader" id="2_e13y7"]
[ext_resource type="Texture2D" uid="uid://qml1jth3jsd" path="res://sprites/players/weapons/Arrow.png" id="2_jyocg"]
[ext_resource type="Texture2D" uid="uid://dgiwcwe0dt077" path="res://sprites/explosion.png" id="3_h006o"]
[ext_resource type="AudioStream" uid="uid://62xrmywm48ps" path="res://audio/sfx/bustershot.wav" id="4_nvdiy"]
[ext_resource type="AudioStream" uid="uid://mfk4w30lewvq" path="res://audio/sfx/tink.wav" id="5_udjxu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdur6"]
size = Vector2(25, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0mkw3"]
shader = ExtResource("2_e13y7")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gmfy2"]
atlas = ExtResource("2_jyocg")
region = Rect2(0, 0, 35, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8au3"]
atlas = ExtResource("3_h006o")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_es6sg"]
atlas = ExtResource("3_h006o")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_drnxu"]
atlas = ExtResource("3_h006o")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2usc"]
atlas = ExtResource("3_h006o")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfst1"]
atlas = ExtResource("3_h006o")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i3xq"]
atlas = ExtResource("2_jyocg")
region = Rect2(0, 11, 35, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsfbq"]
atlas = ExtResource("2_jyocg")
region = Rect2(0, 22, 35, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwusm"]
atlas = ExtResource("2_jyocg")
region = Rect2(0, 33, 35, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_edaxt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmfy2")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8au3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es6sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drnxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2usc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfst1")
}],
"loop": false,
"name": &"explode",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i3xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsfbq")
}],
"loop": true,
"name": &"move",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwusm")
}],
"loop": true,
"name": &"stick",
"speed": 5.0
}]

[node name="Arrow" type="CharacterBody2D"]
z_index = 2
collision_layer = 9
motion_mode = 1
script = ExtResource("1_huft4")

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_vdur6")
one_way_collision = true
one_way_collision_margin = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_0mkw3")
position = Vector2(-5, 0)
sprite_frames = SubResource("SpriteFrames_edaxt")
animation = &"stick"
autoplay = "default"

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nvdiy")
bus = &"SFX"

[node name="ReflectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_udjxu")
bus = &"SFX"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.66893e-06, 4.17233e-07)
scale = Vector2(1.6, 0.8)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
